Fixed-model-box-overlaping-issue

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -146,13 +146,13 @@
     }
 
     .action-close {
-        padding: @modal-popup__padding - 2;
+        padding: @indent__base;
 
         &:active,
         &:focus {
             background: transparent;
-            padding-right: @modal-popup__padding - 2;
-            padding-top: @modal-popup__padding - 2;
+            padding-right: @indent__base;
+            padding-top: @indent__base;
         }
     }
 }
